--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 <!-- <button class="btn btn-secondary" id = "specbtn">special</button> -->
             </div>
         <div class = "row" id="areana">
-            <div class="col-lg-4" id ="player">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-3" id ="player">
                 
                 
             </div>
@@ -83,7 +84,7 @@
                     <h3 id="emove"></h3>
                 </div>
             </div>
-            <div class="col-lg-4" id ="fighting">
+            <div class="col-lg-3" id ="fighting">
 
             </div>
         </div>
