--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             
         </div>
         <div class="row" id="actions">
+                <div class="col-lg-1"></div>
                 <button class="btn btn-danger" id="atkbtn">Attack</button>
                 <button class="btn btn-info" id = "defbtn">Defend</button>
                 <!-- <button class="btn btn-secondary" id = "specbtn">special</button> -->
@@ -79,11 +80,13 @@
             </div>
             <div class="col-lg-4" id ="moves">
                 <div class="row" style="height:50%">
-                    <h3 id="pmove"></h3>
+                    <div> <h3>you:</h3> 
+                        <h3 id="pmove"></h3></div>
                 </div>
                 <div class="row" style="height:50%">
                     <div class="col-lg-8"></div>
-                    <h3 id="emove"></h3>
+                    <div> <h3>Enemy:</h3>
+                        <h3 id="emove"></h3></div>
                 </div>
             </div>
 
