--- a/index.html
+++ b/index.html
@@ -5,29 +5,18 @@ ass shit
     <meta charset="UTF-8">
    
         <u><h3 style="color:df saf sdf  
-                        <h4>hp:</h4>
-                        <h4 class="points"></h4>
-                    </
-                </div>dfas fsd
-                    fdsafsdafasdfasdf sef asdf asf we
-                </div>
-
-                <div class="card sith" id="sid" value="">
-                    <h3 class="card-header">Darth Sidious</h3>
-                    <div class="cf asdf asdf asdf aard-body">
-                        <img src="https://lumiere-a.akamaifdsaf af
-                            <h4 class="points"></h4>
+          fdsafasdf/h4>
                         </div>
                     </div>
-                </div>
+                </div>fdsaffdsafsdf
 
                 <div class="card sith" id="vader" value="">
                     <h3 class="card-header centered">Darth Vader</h3>
-                    <div class="card-body">
-                        <img src="https://boygeniusreport.files.wordpress.com/2015/08/darth-vader.jpg?quality=98&strip=all&w=782" alt="">
-                        <div class="row hp" id="hp">
+                    <div class=fsdafsdf"card-body">
+                        <img src="https://boygensdfasiusreport.files.wordpress.com/2015/08/darth-vader.jpg?quality=98&strip=all&w=782" alt="">
+                        <difsdafasdfv class="row hp" id="hp">
                             <h4>hp:</h4>
-                            <h4 class="points"></h4>
+                            <h4 class="points"></h4>dfasdfasdf
                         </div>    
                     </div>
                 </div>
